# LegoPrinter

./: .gitignore  README.md
PrinterDriver/: CMakeLists.txt
PrinterDriver/src/: LegoPrinterCore.cpp  LegoPrinterCore.h
WindowsForms/LegoPrinter/: Driver.h  MainForm.cpp  MainForm.h
WindowsForms/LegoPrinter/libs/: LegoPrinterCore.lib
